--- a/configuration.properties
+++ b/configuration.properties
@@ -1,3 +1,13 @@
 browser=chrome
 google.url=https://www.google.com/
 
+web.app.url=https://web-table-2.cydeo.com/login
+web.app.username=Test
+web.app.password=Tester
+
+smartbear.order.url=http://secure.smartbearsoftware.com/samples/TestComplete12/WebOrders/Login.aspx?ReturnUrl=%2fsamples%2ftestcomplete12%2fweborders%2fDefault.aspx
+
+vytrack.url=https://qa3.vytrack.com
+driver_username=user1
+driver_password=UserUser123
+
